{
    "name": "GameControls",
    "maps": [
        {
            "name": "InGame",
            "id": "8211ce35-06f3-4559-ae49-e6c42d9c4698",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "1ec0de4a-7c5b-4de2-9cf9-0c2a7ed7aea5",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "3b9e5515-c489-4f37-bbaa-7008ff4c26a4",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "PassThrough",
                    "id": "2a938597-26ae-4c3c-b414-183a7998cda1",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "f20f8a18-ed4c-4548-a698-ccd471adcd40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inhale",
                    "type": "Button",
                    "id": "866cdae2-5bec-440b-ace2-764a91e7bbc9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpitOut",
                    "type": "Button",
                    "id": "c4a2917b-e1d7-47e1-a9cc-70a84fd16fc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "LeftRight",
                    "id": "6f5e169b-82a3-44a6-99e8-7ed32a0fde6f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "d0ca2154-6587-40fb-9059-e8b66d55f77c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "22119417-ae22-40f4-bdda-36ef9c34430d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Space",
                    "id": "18b3996b-229a-4d5b-a28d-7d4888f7db37",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "51aa0fa9-816e-4204-a6e6-bd22c60062cf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "C",
                    "id": "6803a9fa-c2dd-4980-b108-3fd7c2819dc0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "f4bd7a41-219f-449e-a745-7f6889897f69",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "80af66eb-7620-4fec-81f9-bf38ebdbc57d",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d779a496-0eca-47da-8cde-f9aa8fcd666f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inhale",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21989648-bde3-4d41-a2a2-96f946711d7c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpitOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "de8fe8a0-8ea3-4b2d-8f09-c943735e0c29",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Permanent",
            "id": "746feff1-bd09-4f52-90c2-dbacbe86c988",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "12b35cfa-184a-4aa4-b337-9fc21f6173be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "347190de-804d-4064-b085-3d4940b05d52",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}